Update success message in auth_success.html

--- a/app/templates/auth_success.html
+++ b/app/templates/auth_success.html
@@ -46,7 +46,7 @@
         <h1>Configuration Completed!</h1>
         <p>
             Your Google Sheets account has been successfully configured.
-            You can now close this page and return to Telegram to start registering nutritional information.
+            You can now close this page and return to the chat to start registering nutritional information.
         </p>
     </div>
 </body>
